@@ -1,12 +1,13 @@
 package br.edu.fatecgru.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import br.edu.fatecgru.DTO.CursoCadastroDTO;
 import br.edu.fatecgru.DTO.CursoDTO;
+import br.edu.fatecgru.model.entity.Curso;
 import br.edu.fatecgru.model.entity.repository.CursoRepository;
 
 @Service
@@ -14,16 +15,29 @@ public class CursoService {
 	@Autowired
 	private CursoRepository cursoRepository;
 	
-	public List<CursoDTO> buscarCursosFavoritosPorUsuario(int usuarioId) {
-        return cursoRepository.findCursosFavoritosByUsuarioId(usuarioId).stream()
-                     .map(c -> new CursoDTO(
-                         c.getId(),
-                         c.getNome(),
-                         c.getDescricao(),
-                         c.getLinkCurso(),
-                         c.getCategoria().getNome()
-                     ))
-                     .collect(Collectors.toList());
+	@Autowired
+	private CategoriaService categoriaService;
+	
+	public List<CursoDTO> listarTodosCursos(int usuarioId) {
+        return cursoRepository.findAll().stream().map(c -> new CursoDTO(c)).toList();
     }
 	
+	public List<CursoDTO> buscarCursosFavoritosPorUsuario(int usuarioId) {
+        return cursoRepository.findCursosFavoritosByUsuarioId(usuarioId).stream()
+                     .map(c -> new CursoDTO(c)).toList();
+    }
+	
+	//SEM CONTROLLER	
+	public CursoDTO buscarPorId(int idCurso){
+		return cursoRepository.findById(idCurso).get().toDTO();
+	}
+	
+	public void salvarCurso(CursoCadastroDTO dto) {
+        Curso c = new Curso();
+        c.setNome(dto.getNome());
+        c.setDescricao(dto.getDescricao());
+        c.setLinkCurso(dto.getLinkCurso());
+        c.setCategoria(categoriaService.buscarCategoriaPorId(dto.getIdCategoria()));
+		cursoRepository.save(c);
+    }
 }
